@@ -1,4 +1,9 @@
 2011-06-03  Francis Galiegue <fgaliegue@gmail.com>
+	* client-src/client_util.c: don't peek into the GPtrArray directly, but
+	  use g_ptr_array_free(..., FALSE) and g_strjoinv() instead; this
+	  removes a usage of vstrextend()
+
+2011-06-03  Francis Galiegue <fgaliegue@gmail.com>
 	* application-src/amgtar.c: use a GString to build the error buffer
 	  instead of vstrextend()
 
